Fix jumping content

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ body{
     text-align: center;
 }
 
+/* .message{
+    min-height: 48px;
+} */
+
 .container{
     max-width: 800px;
     margin: auto;
@@ -74,7 +78,9 @@ body{
 .card{
     padding-left: 8rem;
     margin-top: .8rem;
+    min-height: 160px;
 }
+
 
 .card > *{
     margin-bottom: .5rem;
